--- a/val.css
+++ b/val.css
@@ -77,7 +77,7 @@ h3
 	text-align: justify;
 	margin-left: 8px;
 	color: #F5EDCE;
-	font-size: 16px;
+	font-size: 14px;
 
 }
 
@@ -88,6 +88,7 @@ h2
 	color: #F5EDCE;
 	text-align: center;
 	margin-left: -5px;
+	text-size: 19px;
 }
 
 p { 
@@ -96,7 +97,7 @@ p {
 	text-align: justify;
 	margin-left: 8px;
 	color: #F5EDCE;
-	font-size: 13px;
+	font-size: 12px;
 }
 
 
